--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Pod::ProjectDocs.
 
+0.42 ???
+    - Fixed race condition on parallel test execution (RT#105374).
+
 0.41 2016-11-07
     - Fixed JSON output to generate stable structures that can be added to version control
       systems without changing all the time.
