Use '::' as path separator for Perl Modules and '/' otherwise, instead of '-' (github issue#1).
Closes #1.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Perl extension Pod::ProjectDocs.
 
 0.44 ???
     - Removed support for JavaScript Pod. www.openjsan.org is dead since 2011 and JavaScript has its own specialized documentation format, JSDOC.
+    - Use '::' as path separator for Perl Modules and '/' otherwise, instead of '-' (github issue#1).
 
 0.43 2016-11-07
     - Properly handle UTF-8 input files by applying the -charset param also when parsing source files.
